--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
-  "name": "react_testing_stamp",
+  "name": "reacdux-Mochaisinonzyme-karma",
   "version": "1.0.0",
-  "description": "",
+  "description": "Boilerplate package for testing with: React Redux Mocha Chai Sinon Enzyme Karma",
   "main": "index.js",
   "scripts": {
     "dev": "webpack-dev-server --devtool eval --progress --colors --inline --hot --content-base dist",
     "build": "webpack",
-    "test": "mocha --compilers js:babel-register --require ./test/test_helper.js --recursive",
-    "test:watch": "npm test -- --watch"
+    "old_test": "mocha --compilers js:babel-register --require ./test/test_helper.js --recursive",
+    "old_test:watch": "npm test -- --watch",
+    "test": "node_modules/.bin/karma start karma.config.js",
+    "test:dev": "npm run test -- --watch"
   },
-  "author": "Paul Pineda <paul@pineda.codes> (http://pineda.codes)",
-  "license": "ISC",
   "devDependencies": {
     "babel-core": "^6.18.2",
     "babel-loader": "^6.2.8",
+    "babel-polyfill": "^6.16.0",
     "babel-preset-es2015": "^6.18.0",
     "babel-preset-react": "^6.16.0",
     "babel-preset-stage-0": "^6.16.0",
@@ -21,7 +22,17 @@
     "chai": "^3.5.0",
     "enzyme": "^2.6.0",
     "jsdom": "^9.8.3",
+    "karma": "^1.3.0",
+    "karma-chai": "^0.1.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-mocha": "^1.3.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-spec-reporter": "0.0.26",
+    "karma-webpack": "^1.8.0",
     "mocha": "^3.1.2",
+    "phantomjs": "^2.1.7",
+    "phantomjs-polyfill": "0.0.2",
     "react-addons-test-utils": "^15.4.0",
     "sinon": "^1.17.6",
     "webpack": "^1.13.3",
@@ -30,5 +41,7 @@
   "dependencies": {
     "react": "^15.4.0",
     "react-dom": "^15.4.0"
-  }
+  },
+  "author": "Paul Pineda <paul@pineda.codes> (http://pineda.codes)",
+  "license": "ISC"
 }
